tests/test_struct/bad/output/nonexisting_struct.catala_en.A.Interpret
[ERROR] Struct Fo has not been defined before

  --> tests/test_struct/bad/nonexisting_struct.catala_en
   | 
13 |   definition y equals x.Fo.f
   |                         ^^
   + Article
